storage: datatables row orderc hanges upon tag annotation (sometimes)
https://gitlab.flab.cesnet.cz/bodik/sner4/-/issues/235

--- a/sner/server/templates/auth/profile/index.html
+++ b/sner/server/templates/auth/profile/index.html
@@ -20,7 +20,7 @@
 	};
 
 	$(document).ready(function() {
-		var dt_profile_webauthn_table = $('#profile_webauthn_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_profile_webauthn_table_options));
+		var dt_profile_webauthn_table = Sner.dt.init_datatable('#profile_webauthn_table', dt_profile_webauthn_table_options);
 	});
 </script>
 {% endblock %}
