--- a/sner/server/templates/auth/user/list.html
+++ b/sner/server/templates/auth/user/list.html
@@ -28,7 +28,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_user_list_table = $('#user_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_user_list_table_options));
+		var dt_user_list_table = Sner.dt.init_datatable('#user_list_table', dt_user_list_table_options);
 	});
 </script>
 {% endblock %}
