--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -27,7 +27,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_queue_list_table = $('#queue_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_queue_list_table_options));
+		var dt_queue_list_table = Sner.dt.init_datatable('#queue_list_table', dt_queue_list_table_options);
 	});
 </script>
 {% endblock %}
