--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -25,7 +25,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_host_list_table = $('#host_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_list_table_options));
+		var dt_host_list_table = Sner.dt.init_datatable('#host_list_table', dt_host_list_table_options);
 	});
 </script>
 {% endblock %}
