--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -115,7 +115,7 @@
 				}
 			};
 			$(document).ready(function() {
-				var dt_host_view_service_table = $('#host_view_service_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_view_service_table_options));
+				var dt_host_view_service_table = Sner.dt.init_datatable('#host_view_service_table', dt_host_view_service_table_options);
 			});
 		</script>
 	</div>
@@ -168,7 +168,7 @@
 				}
 			};
 			$(document).ready(function() {
-				var dt_host_view_vuln_table = $('#host_view_vuln_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_view_vuln_table_options));
+				var dt_host_view_vuln_table = Sner.dt.init_datatable('#host_view_vuln_table', dt_host_view_vuln_table_options);
 				$('#host_view_vuln_table_toolbar .abutton_selectall').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectall);
 				$('#host_view_vuln_table_toolbar .abutton_selectnone').on('click', {'dt': dt_host_view_vuln_table}, Sner.dt.selectnone);
 				$('#host_view_vuln_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_host_view_vuln_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
@@ -201,7 +201,7 @@
 				}
 			};
 			$(document).ready(function() {
-				var dt_host_view_note_table = $('#host_view_note_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_host_view_note_table_options));
+				var dt_host_view_note_table = Sner.dt.init_datatable('#host_view_note_table', dt_host_view_note_table_options);
 			});
 		</script>
 	</div>
