--- a/sner/server/templates/storage/note/list.html
+++ b/sner/server/templates/storage/note/list.html
@@ -25,7 +25,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_note_list_table = $('#note_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_note_list_table_options));
+		var dt_note_list_table = Sner.dt.init_datatable('#note_list_table', dt_note_list_table_options);
 	});
 </script>
 {% endblock %}
