--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -27,7 +27,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_service_list_table = $('#service_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_service_list_table_options));
+		var dt_service_list_table = Sner.dt.init_datatable('#service_list_table', dt_service_list_table_options);
 	});
 </script>
 {% endblock %}
