--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -30,7 +30,7 @@
 		}
 	};
 	$(document).ready(function() {
-		var dt_vuln_list_table = $('#vuln_list_table').DataTable($.extend({}, Sner.dt.ajax_options, dt_vuln_list_table_options));
+		var dt_vuln_list_table = Sner.dt.init_datatable('#vuln_list_table', dt_vuln_list_table_options);
 		$('#vuln_list_table_toolbar .abutton_selectall').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectall);
 		$('#vuln_list_table_toolbar .abutton_selectnone').on('click', {'dt': dt_vuln_list_table}, Sner.dt.selectnone);
 		$('#vuln_list_table_toolbar .abutton_tag_multiid').on('click', {'dt': dt_vuln_list_table, 'route_name': 'storage.vuln_tag_multiid_route', 'action': 'set'}, Sner.storage.action_tag_multiid);
