--- a/sner/server/templates/scheduler/queue/list.html
+++ b/sner/server/templates/scheduler/queue/list.html
@@ -38,6 +38,7 @@
 {% call cm.heading(['Queues']) %}
 	<div class="pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('scheduler.queue_add_route') }}">Add</a>
+		<a class="btn btn-outline-primary" href="{{ url_for('visuals.workflowtree_route') }}">Workflow tree</a>
 	</div>
 {% endcall %}
 
