server: fix form action to work under gunicorn

--- a/sner/server/templates/storage/annotate.html
+++ b/sner/server/templates/storage/annotate.html
@@ -1,7 +1,7 @@
 {#- This file is part of sner4 project governed by MIT license, see the LICENSE.txt file. -#}
 {% import "bootstrap_wtf.html" as bwtf %}
 {% import "common_macros.html" as cm %}
-<form method="post" action="{{ request.url }}">
+<form method="post" action="{{ request.full_path }}">
 	{{ form.csrf_token }}
 	{{ bwtf.bootstrap_field(form.tags, horizontal=True) }}
 	{{ cm.addtag_buttons() }}
