--- a/sner/server/templates/storage/vuln/list.html
+++ b/sner/server/templates/storage/vuln/list.html
@@ -41,7 +41,11 @@
 {% endblock %}
 
 {% block content %}
-{% call cm.heading(['Vulns']) %}{% endcall %}
+{% call cm.heading(['Vulns']) %}
+	<div class="pl-2">
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseFilter"><i class="fas fa-filter"></i></a>
+	</div>
+{% endcall %}
 
 <div id="vuln_list_table_toolbar" class="dt_toolbar">
 	<div class="btn-group">
@@ -64,13 +68,13 @@
 	<a class="btn btn-outline-secondary abutton_delete_multiid" href="#"><i class="fas fa-trash text-danger"></i></a>
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled"><i class="fas fa-filter"></i></a>
-		{% if 'filter' in request.args %}<a class="btn btn-info" href="{{ url_for('storage.vuln_list_route') }}">unfilter</a>{% endif %}</h1>
 		<a class="btn btn-outline-secondary" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags=="{}"') }}">Not tagged</a>
 		<a class="btn btn-outline-secondary" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags!="{}"') }}">Tagged</a>
 		<a class="btn btn-outline-secondary" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags not_any "report" AND Vuln.tags not_any "info"') }}">Exclude reviewed</a>
 		<a class="btn btn-outline-secondary" href="{{ url_for('storage.vuln_list_route', filter='Vuln.tags any "report"') }}">Only Report</a>
 	</div>
 	<a class="btn btn-outline-secondary" href="{{ url_for('storage.vuln_report_route') }}">Generate report</a>
+	{{ cm.filter() }}
 </div>
 
 <table id="vuln_list_table" class="table table-hover table-sm" width="100%"></table>
