--- a/sner/server/static/sner/sner.css
+++ b/sner/server/static/sner/sner.css
@@ -57,3 +57,7 @@ td.dt-nowrap {
 td.abutton_annotate_dt:hover, td.abutton_annotate_view:hover {
 	border-right: 2px dotted #ffc107;
 }
+
+.storage_filter {
+	margin-top: .3rem;
+}
