--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -33,10 +33,14 @@
 {% endblock %}
 
 {% block content %}
-{% call cm.heading(['Services']) %}{% endcall %}
+{% call cm.heading(['Services']) %}
+	<div class="pl-2">
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseFilter"><i class="fas fa-filter"></i></a>
+	</div>
+{% endcall %}
 
 <div id="service_list_table_toolbar" class="dt_toolbar">
-	{% if 'filter' in request.args %}<a class="btn btn-info" href="{{ url_for('storage.service_list_route') }}">unfilter</a>{% endif %}
+	{{ cm.filter() }}
 </div>
 
 <table id="service_list_table" class="table table-hover table-sm" width="100%"></table>
