storage: css naming for storage_filter/filter_bar (not solely storage component anymore)

--- a/sner/server/static/sner/sner.css
+++ b/sner/server/static/sner/sner.css
@@ -58,6 +58,6 @@ td.abutton_annotate_dt:hover, td.abutton_annotate_view:hover {
 	border-right: 2px dotted #ffc107;
 }
 
-.storage_filter {
+.filter_bar {
 	margin-top: .3rem;
 }
