--- a/sner/server/templates/common_macros.html
+++ b/sner/server/templates/common_macros.html
@@ -40,3 +40,7 @@
 	</div>
 </form>
 {%- endmacro -%}
+
+{%- macro main_menu_link(title, route) -%}
+<li class="nav-item{% if request.endpoint == route %} active{% endif %}"><a class="nav-link" href="{{ url_for(route, **kwargs) }}">{{ title }}</a></li>
+{%- endmacro -%}
