--- a/sner/server/templates/storage/host/list.html
+++ b/sner/server/templates/storage/host/list.html
@@ -34,12 +34,12 @@
 {% call cm.heading(['Hosts']) %}
 	<div class="pl-2">
 		<a class="btn btn-outline-primary" href="{{ url_for('storage.host_add_route') }}">Add</a>
-		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseFilter"><i class="fas fa-filter"></i></a>
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
 
 <div id="host_list_table_toolbar" class="dt_toolbar">
-	{{ cm.filter() }}
+	{{ cm.filter_form() }}
 </div>
 
 <table id="host_list_table" class="table table-hover table-sm" width="100%"></table>
