--- a/sner/server/templates/storage/service/grouped.html
+++ b/sner/server/templates/storage/service/grouped.html
@@ -22,7 +22,7 @@
 {% block content %}
 {% call cm.heading(['Services', 'Grouped']) %}
 	<div class="pl-2">
-		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseFilter"><i class="fas fa-filter"></i></a>
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
 
@@ -34,7 +34,7 @@
 		{% endfor %}
 		<a class="btn btn-outline-secondary{% if not request.args.get('crop')|int %} active{% endif %}" href="{{ url_for('storage.service_grouped_route') }}">no crop</a>
 	</div>
-	{{ cm.filter() }}
+	{{ cm.filter_form() }}
 </div>
 
 <table id="service_grouped_table" class="table table-hover table-sm" width="100%"></table>
