--- a/sner/server/templates/storage/service/list.html
+++ b/sner/server/templates/storage/service/list.html
@@ -35,12 +35,12 @@
 {% block content %}
 {% call cm.heading(['Services']) %}
 	<div class="pl-2">
-		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseFilter"><i class="fas fa-filter"></i></a>
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
 	</div>
 {% endcall %}
 
 <div id="service_list_table_toolbar" class="dt_toolbar">
-	{{ cm.filter() }}
+	{{ cm.filter_form() }}
 </div>
 
 <table id="service_list_table" class="table table-hover table-sm" width="100%"></table>
