--- a/sner/server/templates/visuals/dnstree.html
+++ b/sner/server/templates/visuals/dnstree.html
@@ -23,14 +23,16 @@ svg {
 {% endblock %}
 
 {% block content %}
-{% call cm.heading(['Visuals', 'DNS Tree']) %}{% endcall %}
-<!--
-	http://bl.ocks.org/fancellu/2c782394602a93921faff74e594d1bb1
-	https://medium.com/ninjaconcept/interactive-dynamic-force-directed-graphs-with-d3-da720c6d7811
-	https://github.com/ninjaconcept/d3-force-directed-graph
-	https://bl.ocks.org/rofrischmann/74e3b61530c350d1ec1771416249a535
-	https://bl.ocks.org/mbostock/1129492
--->
+{% call cm.heading(['Visuals', 'DNS Tree']) %}
+	<div class="pl-2">
+		<a class="btn btn-outline-secondary" data-toggle="collapse" href="#filter_form"><i class="fas fa-filter"></i></a>
+	</div>
+{% endcall %}
+
+<div id="dnstree_toolbar" class="dt_toolbar">
+	{{ cm.filter_form() }}
+</div>
+
 <div class="text-right py-1">
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled">crop:</a>
@@ -51,6 +53,12 @@ svg {
 </div>
 
 <script>
+// http://bl.ocks.org/fancellu/2c782394602a93921faff74e594d1bb1
+// https://medium.com/ninjaconcept/interactive-dynamic-force-directed-graphs-with-d3-da720c6d7811
+// https://github.com/ninjaconcept/d3-force-directed-graph
+// https://bl.ocks.org/rofrischmann/74e3b61530c350d1ec1771416249a535
+// https://bl.ocks.org/mbostock/1129492
+
 function remToPixels(rem) {
 	return rem * parseFloat(getComputedStyle(document.documentElement).fontSize);
 }
