--- a/sner/server/templates/common_macros.html
+++ b/sner/server/templates/common_macros.html
@@ -26,7 +26,7 @@
 {%- endmacro -%}
 
 {%- macro filter_form() -%}
-{% set show_form = 'filter' in request.args %}
+{% set show_form = 'filter' in request.values %}
 <form class="form filter_bar collapse {% if show_form %}show{% endif %}" id="filter_form">
 	<div class="input-group flex-fill">
 		<div class="input-group-prepend">
@@ -38,7 +38,7 @@
 			<button type="submit" class="btn btn-outline-secondary"><i class="fa fa-search"></i></button>
 		</div>
 	</div>
-	{% for k, v in request.args.items() if k != "filter" %}
+	{% for k, v in request.values.items() if k != "filter" %}
 		<input type="hidden" name="{{ k }}" value="{{ v }}">
 	{% endfor %}
 </form>
