--- a/sner/server/templates/storage/service/grouped.html
+++ b/sner/server/templates/storage/service/grouped.html
@@ -30,9 +30,9 @@
 	<div class="btn-group">
 		<a class="btn btn-outline-secondary disabled">crop at:</a>
 		{% for crop in [1, 2, 3, 4, 5] %}
-			<a class="btn btn-outline-secondary{% if request.args.get('crop')|int == crop %} active{% endif %}" href="{{ url_for('storage.service_grouped_route', crop=crop) }}">{{ crop }}</a>
+			<a class="btn btn-outline-secondary{% if request.values.get('crop')|int == crop %} active{% endif %}" href="{{ url_for('storage.service_grouped_route', crop=crop) }}">{{ crop }}</a>
 		{% endfor %}
-		<a class="btn btn-outline-secondary{% if not request.args.get('crop')|int %} active{% endif %}" href="{{ url_for('storage.service_grouped_route') }}">no crop</a>
+		<a class="btn btn-outline-secondary{% if not request.values.get('crop')|int %} active{% endif %}" href="{{ url_for('storage.service_grouped_route') }}">no crop</a>
 	</div>
 	{{ cm.filter_form() }}
 </div>
