--- a/sner/server/templates/base.html
+++ b/sner/server/templates/base.html
@@ -13,6 +13,8 @@
 
 	<script type="text/javascript" src="{{ url_for('static', filename='jquery/jquery-3.4.1.min.js') }}"></script>
 
+	<script type="text/javascript" src="{{ url_for('static', filename='popper/popper.min.js') }}"></script>
+
 	<!-- default theme tuned at https://bootstrap.build -->
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='bootstrap/css/themed-bootstrap.min.css') }}" />
 	<script type="text/javascript" src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
