--- a/sner/server/templates/storage/host/view.html
+++ b/sner/server/templates/storage/host/view.html
@@ -100,7 +100,14 @@
 					Sner.dt.column('host_address', {'visible': false}),
 					Sner.dt.column('host_hostname', {'visible': false}),
 					Sner.dt.column('proto'),
-					Sner.dt.column('port'),
+					Sner.dt.column('port', {
+						'className': 'clickable',
+						'render': function(data, type, row, meta) {
+							return Sner.storage.hbs.service_endpoint_dropdown(
+								$.extend(row, {'service_proto': row['proto'], 'service_port': row['port'], 'service': row['port'] + '/' + row['proto']})
+							);
+						}
+					}),
 					Sner.dt.column('name'),
 					Sner.dt.column('state'),
 					Sner.dt.column('info'),
@@ -153,7 +160,7 @@
 					Sner.dt.column('host_hostname', {'visible': false}),
 					Sner.dt.column('service_proto', {'visible': false}),
 					Sner.dt.column('service_port', {'visible': false}),
-					Sner.dt.column('service'),
+					Sner.dt.column('service', {'className': 'clickable', 'render': function(data, type, row, meta) { return Sner.storage.hbs.service_endpoint_dropdown(row); }}),
 					Sner.dt.column('name', {'render': function(data, type, row, meta) { return Sner.storage.hbs.vuln_link(row); }}),
 					Sner.dt.column('xtype', {'visible': false}),
 					Sner.dt.column('severity', {'render': function(data, type, row, meta) { return Sner.storage.hbs.severity_label(row); }}),
@@ -190,7 +197,7 @@
 					Sner.dt.column('host_id', {'visible': false}),
 					Sner.dt.column('host_address', {'visible': false}),
 					Sner.dt.column('host_hostname', {'visible': false}),
-					Sner.dt.column('service'),
+					Sner.dt.column('service', {'className': 'clickable', 'render': function(data, type, row, meta) { return Sner.storage.hbs.service_endpoint_dropdown(row); }}),
 					Sner.dt.column('xtype'),
 					Sner.dt.column('data', {'className': 'forcewrap'}),
 					Sner.dt.column('tags', {'className': 'abutton_annotate_dt', 'render': function(data, type, row, meta) {return Sner.storage.hbs.tag_labels(row);}}),
