--- a/sner/server/templates/storage/vuln/view.html
+++ b/sner/server/templates/storage/vuln/view.html
@@ -39,9 +39,8 @@ $(document).ready(function() {
 				{{ vuln.host.hostname }}
 			</td>
 			<th>service</th>
-			<td>
-				{{ vuln.service }}
-				<span class="render_hbs" data-hbs="storage.hbs.service_endpoint_links" data-hbs_context='{{ {'host_address': vuln.host.address, 'host_hostname': vuln.host.hostname, 'service_proto': vuln.service.proto|default(None), 'service_port': vuln.service.port|default(None)}|tojson }}'></span>
+			<td class="clickable">
+				<span class="render_hbs" data-hbs="storage.hbs.service_endpoint_dropdown" data-hbs_context='{{ {'host_address': vuln.host.address, 'host_hostname': vuln.host.hostname, 'service_proto': vuln.service.proto|default(None), 'service_port': vuln.service.port|default(None), 'service': vuln.service|string}|tojson }}'></span>
 			</td>
 		</tr>
 		<tr>
